--- a/server/public/payment.html
+++ b/server/public/payment.html
@@ -6,11 +6,12 @@
     <title>Stripe Payment</title>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
-        /* Add some styling for the card form */
+        /* Styling for the card form */
         #card-element {
             border: 1px solid #ccc;
             padding: 10px;
             margin-bottom: 20px;
+            max-width: 500px;
             border-radius: 4px;
         }
         #submit-btn {
